refactor(database): 重构数据库配置和结构
- 修改数据库名称从 mjga 改为 mbga- 更新数据库用户和密码
- 扩展数据库结构，添加新表和字段
- 调整 Quartz 配置，使用动态数据库名称
- 更新 Gradle配置和属性文件

--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
-COMPOSE_PROJECT_NAME=mjga-dbfirst
+COMPOSE_PROJECT_NAME=mbga-dbfirst
 # database
 DATABASE_HOST_PORT=host.docker.internal:3306
-DATABASE_STORE=~/docker/store/mjga-dbfirst/db/data
-DATABASE_DB=mjga
-DATABASE_USER=mjga-dbfirst
-DATABASE_PASSWORD=mjga-dbfirst
-DATABASE_ROOT_PASSWORD=mjga-dbfirst-root
+DATABASE_STORE=~/docker/store/mbga-dbfirst/db/data
+DATABASE_DB=mbga
+DATABASE_USER=mbga-dbfirst
+DATABASE_PASSWORD=mbga-dbfirst
+DATABASE_ROOT_PASSWORD=mbga-dbfirst-root
 DATABASE_EXPOSE_PORT=3306
 DATABASE_INIT=./db.d/init
 # web
 WEB_EXPOSE_PORT=8080
-LOG_PATH=~/docker/store/mjga-dbfirst/log
+LOG_PATH=~/docker/store/mbga-dbfirst/log
 RESOURCE_LOCATIONS=classpath:public/
 RESOURCE_HANDLER=/asset/**
 
@@ -21,12 +21,12 @@ ALLOWED_HEADERS=*
 # redis
 REDIS_HOST=host.docker.internal
 REDIS_EXPOSE_PORT=6379
-REDIS_PASSWORD=mjga-dbfirst
-REDIS_STORE=~/docker/store/mjga-dbfirst/redis/data
+REDIS_PASSWORD=mbga-dbfirst
+REDIS_STORE=~/docker/store/mbga-dbfirst/redis/data
 # rabbitmq
 RABBITMQ_HOST=host.docker.internal
-RABBITMQ_DEFAULT_USER=mjga
-RABBITMQ_DEFAULT_PASS=mjga
+RABBITMQ_DEFAULT_USER=mbga
+RABBITMQ_DEFAULT_PASS=mbga
 RABBITMQ_PORT=5672
 RABBITMQ_UI_PORT=15672
-RABBITMQ_DATA_STORE=~/docker/store/mjga-dbfirst/mq/data
+RABBITMQ_DATA_STORE=~/docker/store/mbga-dbfirst/mq/data
