--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,6 @@ org.gradle.caching=true
 
 # Project Properties
 database.hostPort=host.docker.internal:3306
-database.name=mjga
-database.user=mjga-dbfirst
-database.password=mjga-dbfirst
+database.name=mbga
+database.user=mbga-dbfirst
+database.password=mbga-dbfirst
