--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,7 @@ services:
       MYSQL_USER: ${DATABASE_USER}
       MYSQL_PASSWORD: ${DATABASE_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD}
+    command: --lower_case_table_names=1
     ports:
       - ${DATABASE_EXPOSE_PORT}:3306
     volumes:
